@@ -3,6 +3,12 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- PERL_TIE_TABLES -> PERL_TABLE_API
+
+- $ENV{PATH}
+
+- $Apache::Server{Re}Starting -> $Apache::Server::{Re}Starting
+
 - Apache::SubRequest->bytes_sent
 
 - deal with mod_ssl.c/Stronghold test configuration
