@@ -8,6 +8,16 @@ Changes - Apache mod_perl change logfile
 
 =item 1.15_01-dev
 
+PerlDirectiveHandlers changes:
+
+ -fix Apache::ExtUtils::command_table to properly deal with
+  <Containers> inside HASH ref entries
+ -now looks for a DIR_CREATE() method rather than new()
+ -dir_merge() must now be DIR_MERGE()
+ -order of $parms and $cfg args swapped
+ -added missing FLAG directive handler
+ -module.name is now the Perl package name, rather than Foo.xs 
+
 add dTHR for PERL_TIE_SCRIPTNAME=1 [Michael Parker <parker@austx.tandem.com>]
 
 deprecate $r->cgi_{env,var}, $r->subprocess_env can do all that and
